@@ -1,5 +1,14 @@
 2002-12-15  Havoc Pennington  <hp@pobox.com>
 
+	* src/window.c (meta_window_new): get window name before anything
+	else.
+
+	* src/xprops.c (validate_or_free_results): instead of suggesting
+	how to get window title etc. with xprop, just print out the 
+	window title. much better.
+
+2002-12-15  Havoc Pennington  <hp@pobox.com>
+
 	* src/xprops.c (validate_or_free_results): make the warning about
 	strange property contents blame the application and explain how to 
 	use xprop to diagnose which app is causing the problem.
